# murakams-home

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  nginx.conf  pyproject.toml  requirements-dev.txt  requirements.txt  supervisord.conf
.github/workflows/: build-and-push.yml  on_pull_request.yml
alembic/: env.py
alembic/versions/: e6033ec4fc22_initial_schema.py
app/: config.py  database.py  local_data.py  main.py  models.py
app/services/: email.py  github.py  pdf.py
nginx/: nginx.conf
nginx/sites-available/: portfolio.conf
scripts/: init.sql  seed_data.py  start.sh
static/: manifest.json  robots.txt
static/css/: custom.css
static/data/: contacts.json  projects.json
static/locales/: en.json  pt.json
templates/: base.html
templates/components/: contact_error.html  contact_success.html  experience_list.html  project_list.html  skill_grid.html  theme_toggle.html
templates/pages/: about.html  contact.html  home.html  projects.html  resume.html
templates/pdf/: resume_pdf.html
tests/: README.md  conftest.py  test_runner.py  test_simple.py
tests/fixtures/: sample_data.py
tests/integration/: test_app_integration.py
tests/unit/: test_config.py  test_local_data.py  test_main.py  test_services.py
